--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,12 @@
                 <version>1.0.8</version>
             </dependency>
             <!--mybatis 数据访问层 end -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>3.2.4.RELEASE</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
